--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@shivamdevs12/common": "^1.0.0",
     "@tailwindcss/vite": "^4.0.6",
+    "@types/node": "^22.13.10",
     "axios": "^1.7.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
